.app wrapper removed altogether; fixed Dark Reader behavior by properly overflow to body and putting scroll on it

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,13 +1,22 @@
 @use "styles/variables";
 
 html,
-body,
-#root {
-    height: 100%;
+body {
     font-size: 1rem;
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: "Open Sans", sans-serif;
+    height: 100%;
+    overflow-y: auto;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    padding: 1rem;
 }
 
 *,
